# Embedded-Systems

./: .clang-format  .gitignore  Embedded-Systems.code-workspace  README.md  flake.nix
HW1/SystemC/: .gitignore  CMakeLists.txt
HW1/SystemC/src/: hello_world.cpp  hw1-sysc.cpp
P1/Sample_output/: correct_simulation.txt
P1/src/: Psim.cpp
P2/: SIM.cpp
P2/Sample_input/: dout2.txt  reference.txt  reference2.txt
P2/Sample_output/: 2nd_comp.txt  2nd_comp_decompression.txt  cout.txt  cout2.txt  cout2_decompression.txt
P2/debug/: fileOutput.json  preProcessedOutput.json
P2/src/: SIM.cpp
